* sshdump can now be copied to multiple instances. Each instance will show up a different interface and will have its own profile.
* The main window now supports a packet diagram view, which shows each packet as a textbook-style diagram.
* Filter buttons (“Preferences -> Filter Buttons”) can be grouped by using “//” as a path separator in the filter button label.

// === Removed Features and Support

//=== Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters.
[commaize]
--
Arinc 615A (A615A)
Asphodel Protocol
AudioCodes Debug Recording (ACDR)
Bluetooth HCI ISO (BT HCI ISO)
Cisco MisCabling Protocol (MCP)
Community ID Flow Hashing (CommunityID)
DCE/RPC IRemoteWinspool SubSystem, (IREMOTEWINSPOOL)
Dynamic Link Exchange Protocol (DLEP)
Fortinet Single Sign-on (FSSO)
FTDI Multi-Protocol Synchronous Serial Engine (FTDI MPSSE)
EAP Generalized Pre-Shared Key (EAP-GPSK)
EAP Password Authenticated Exchange (EAP-PAX)
EAP Pre-Shared Key (EAP-PSK)
EAP Shared-secret Authentication and Key Establishment (EAP-SAKE)
Hypertext Transfer Protocol Version 3 (HTTP3)
ILDA Digital Network (IDN)
Java Debug Wire Protocol (JDWP)
LBM Stateful Resolution Service (LBMSRS)
Lithionics Battery Management
OBSAI UDP-based Communication Protocol (UDPCP)
Palo Alto Heartbeat Backup (PA-HB-Bak)
ScyllaDB RPC
Technically Enhanced Capture Module Protocol (TECMP)
Tunnel Extensible Authentication Protocol (TEAP)
UDP based FTP w/ multicast V5 (UFTP5)
USB Printer (USBPRINTER)
ILDA Digital Network (IDN)
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
MP4 (ISO/IEC 14496-12)
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._
