@@ -428,11 +428,19 @@ dissect_ipp(tvbuff_t *tvb, packet_info *pinfo, proto_tree *tree, void* data)
     operation_status = tvb_get_ntohs(tvb, 2);
     request_id       = tvb_get_ntohl(tvb, 4);
 
-    col_set_str(pinfo->cinfo, COL_PROTOCOL, "IPP");
-    if (is_request)
-        col_add_fstr(pinfo->cinfo, COL_INFO, "IPP Request (%s)", val_to_str(operation_status, operation_vals, "0x%04x"));
-    else
-        col_add_fstr(pinfo->cinfo, COL_INFO, "IPP Response (%s)", val_to_str(operation_status, status_vals, "0x%04x"));
+    if (proto_is_frame_protocol(pinfo->layers, "ippusb")) {
+        col_set_str(pinfo->cinfo, COL_PROTOCOL, "IPPUSB");
+        if (is_request)
+            col_add_fstr(pinfo->cinfo, COL_INFO, "IPPUSB Request (%s)", val_to_str(operation_status, operation_vals, "0x%04x"));
+        else
+            col_add_fstr(pinfo->cinfo, COL_INFO, "IPPUSB Response (%s)", val_to_str(operation_status, status_vals, "0x%04x"));
+    } else {
+        col_set_str(pinfo->cinfo, COL_PROTOCOL, "IPP");
+        if (is_request)
+            col_add_fstr(pinfo->cinfo, COL_INFO, "IPP Request (%s)", val_to_str(operation_status, operation_vals, "0x%04x"));
+        else
+            col_add_fstr(pinfo->cinfo, COL_INFO, "IPP Response (%s)", val_to_str(operation_status, status_vals, "0x%04x"));
+    }
 
     ti = proto_tree_add_item(tree, proto_ipp, tvb, offset, -1, ENC_NA);
     ipp_tree = proto_item_add_subtree(ti, ett_ipp);
